--- a/package.json
+++ b/package.json
@@ -1,14 +1,5 @@
 {
-  "name": "teacher-review-system",
-  "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "express": "^4.19.2"
+    "start": "node server.js"
   }
 }
